--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toasted Raviolis</title>
+    <link rel="stylesheet" href="ravioli.css">
 </head>
 <body>
     <h1>How to make Toasted Raviolis</h1>
